# nyaa

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: .gitignore  avatar.txt  cube.txt  profile.txt  properties.txt  sprite.txt
assets/actor/: def.txt  skill.txt
assets/shader/: billboard.fs  billboard.vs  block.fs  block.vs  demo.fs  demo.vs  simple-light.fs  simple-light.vs  text.fs  text.vs
assets/text/: en_US.txt  zh_CN.txt
assets/texture/: def.txt
assets/textures/: avatar.txt  cube.txt  def.txt
scripts/: README  build-cube-index.py  build-text-index.py  gen  pic-tools.py  pick-tiles.py  picks  tex-id-gen.py
src/: main.cc
src/base/: allocator.h  allocators.h  arena-utils.cc  arena-utils.h  arena.cc  arena.h  arenas.cc  arenas.h  at-exit.cc  at-exit.h  base.h  bit-ops.h  crc32.c  hash.cc  hash.h  io-utils.h  lazy-instance.h  queue-macros.h  reference-count.h  sha256.c  sha256.h  slice.cc  slice.h  varint-encoding.cc  varint-encoding.h  zone.cc  zone.h
src/component/: ai-state-component.h  avatar-component.h  cube-component.cc  cube-component.h  movement-component.cc  movement-component.h  plant-component.h  property-components.h  sprite-component.h  zone-component.cc  zone-component.h
src/entity/: actor-entity.cc  actor-entity.h  avatar-entity.h  cube-entity.cc  cube-entity.h  entity.h  plant-entity.h  player-entity.cc  player-entity.h  region-entity.h  region.h
src/game/: avatar-view-scene.cc  avatar-view-scene.h  boot-scene.cc  boot-scene.h  constants.h  entities-set.cc  entities-set.h  entities-zone.cc  entities-zone.h  entity-grid-set.cc  entity-grid-set.h  entity-virtual-db.cc  entity-virtual-db.h  game.cc  game.h  identifiers.cc  identifiers.h  matrix.cc  matrix.h  properties.cc  properties.h  pseudo-random-number.h  scene.cc  scene.h  test-scene.cc  test-scene.h  vector.h  world-def.cc  world-def.h  world-map.h  world.cc  world.h
src/resource/: actor-library.cc  actor-library.h  ai-def.cc  ai-def.h  avatar-library.cc  avatar-library.h  cube-def-inl.h  cube-kinds-inl.h  cube-library.cc  cube-library.h  definition.cc  definition.h  font-library.cc  font-library.h  font-set.cc  font-set.h  resource-library.h  shader-library.cc  shader-library.h  skill-library.cc  skill-library.h  sprite-library.cc  sprite-library.h  text-def-inl.h  text-formatter.cc  text-formatter.h  text-id.h  text-ids-inl.h  text-library.cc  text-library.h  texture-library.cc  texture-library.h
src/scene/: avatar-view-scene.cc  avatar-view-scene.h  boot-scene.cc  boot-scene.h  controller.h  cube-view-scene.cc  cube-view-scene.h  scene.cc  scene.h  test-scene.cc  test-scene.h  tile-view-scene.cc  tile-view-scene.h  world-creation-scene.cc  world-creation-scene.h
src/system/: actor-ai-system.cc  actor-ai-system.h  actor-billboard-render-system.cc  actor-billboard-render-system.h  actor-movement-system.cc  actor-movement-system.h  actor-navigation-system.h  avatar-render-system.cc  avatar-render-system.h  entity-allocation-system.h  geometry-transform-system.cc  geometry-transform-system.h  impact-checking-system.cc  impact-checking-system.h  random-region-system.cc  random-region-system.h  random-zone-system.cc  random-zone-system.h  sprite-render-system.cc  sprite-render-system.h  system.cc  system.h  world-generating-system.cc  world-generating-system.h  zone-generating-system.cc  zone-generating-system.h  zone-loading-system.cc  zone-loading-system.h  zone-render-system.cc  zone-render-system.h
src/ui/: avatar-selector.cc  avatar-selector.h  button-group.cc  button-group.h  check-box-group.cc  check-box-group.h  component.cc  component.h  controller.cc  controller.h  flat-menu.cc  flat-menu.h  input-box.cc  input-box.h  item-grid-view.cc  item-grid-view.h  item-group.cc  item-group.h  label-check-box.cc  label-check-box.h  label-component.cc  label-component.h  label-input-box.cc  label-input-box.h  label-text-box.cc  label-text-box.h  list-box.cc  list-box.h  message-box.cc  message-box.h  property-box-group.cc  property-box-group.h  property-box.cc  property-box.h  ui-service.cc  ui-service.h  ui.h
vscode.macos/: c_cpp_properties.json  launch.json  settings.json  tasks.json
